--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 
 script:
-  - mvn package -DskipTests
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build -t zerko/tp-cpe-travis:http-api-server sample-application-http-api-server
   - docker build -t zerko/tp-cpe-travis:db-changelog sample-application-db-changelog-job
@@ -12,4 +12,8 @@ cache:
 
 services:
   - docker
-
+addons:
+  sonarcloud:
+    organization: "nicolasospina-sanchez"
+    token:
+      secure: $SONARCLOUD_TOKEN # encrypted value of your token
